--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@material-tailwind/react": "^2.1.8",
     "@mui/material": "^5.15.1",
+    "@tanstack/react-query": "^5.14.2",
+    "axios": "^1.6.2",
     "firebase": "^10.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
